# mc_rtc_ros_compat

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix
.github/workflows/: nix.yml  package.yml
cmake/: get-jrl-cmakemodules.cmake
debian/: changelog  control  control.ros  copyright  libmc-rtc-ros-compat-dev.install  libmc-rtc-ros-compat.install  ros-ROS-DISTRO-mc-rtc-ros-compat.install  ros-ROS_DISTRO-mc-rtc-plugin.install  rules
include/mc_rtc_ros_compat/: path.h
src/: path.cpp
test/: test_path.cpp
